<resources>
    <string name="app_name">Gnemes</string>
    <string name="text_offline">You are offline</string>
    <string name="text_offline_detail">Offline Detail:</string>
    <string name="str_featured">Featured</string>
    <string name="str_lucky">Lucky</string>
    <string name="text_demo_long">Demo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo DemoDemo Demo</string>
    <string name="text_demo_ol"> It\'s clear to me who was the most photogenic in this picture</string>
    <string name="text_demo_sl">「この写真で最もフォトジェニックだったのは私には明らかだ」</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_meme_detail">MemeDetailActivity</string>
    <string name="title_activity_meme_login">GnemesLoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gnemes">Gnemes</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
</resources>